--- a/example/index.html
+++ b/example/index.html
@@ -46,12 +46,12 @@
 
   <p class="alert alert-success">
     Open the network inspector in your browser, click any of the nav options or buttons above and you'll see the analytics
-    request being executed. Then check <a class="alert-link" href="http://www.google.com/analytics/web/">your Google Analytics dashboard</a>.
+    request being executed. Then check your IBM Digital Analytics dashboard.
   </p>
 </div>
 
 <script>
-  angular.module('sample', ['angulartics', 'angulartics.google.analytics'])
+  angular.module('sample', ['angulartics', 'angulartics.coremetrics'])
       .config(function ($routeProvider, $analyticsProvider) {
         $routeProvider
             .when('/',  { template: '<h1>Root Page</h1>', controller: 'SampleCtrl' })
